@@ -14,6 +14,7 @@ Log:
 	- added tifiles_build_filename function (which replaces built-in/static code in various 
 		places and some built-in code in TiLP).
 	- tifiles_content_write_flash: build filename from the last header (=data).
+	- fortified group.c: release memory on error exit
 
 - 10/08/2006, version 0.2.5: roms
 	- improved TiGroup support API
